--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "MathGame0825.sln"
+    "dotnet.defaultSolution": "AorareMATH.sln"
 }
